argocd/manifests/victoria-logs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-logs
  namespace: victoria-logs
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - vm-logs.homelab.gbsoft.net
  rules:
    - backendRefs:
        - name: victoria-logs-victoria-logs-single-server
          port: 9428
